tests/language_tests/pass/0082_function_call_expression_returns_nothing.ee
fn foo() {
}

fn main() {
    print(foo() == nothing);
    print(nothing == foo());
}
